# eugine

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  README.md  gitpod.DOCKERFILE
eugine/: CMakeLists.txt
eugine/src/: CMakeLists.txt  egpch.cpp  egpch.h  eugine.cpp  eugine.h
eugine/src/eugine/: CMakeLists.txt  application.cpp  application.h  core.h  entryPoint.h  layer.h  layerStack.cpp  layerStack.h  log.h  window.h
eugine/src/eugine/core/: CMakeLists.txt  application.cpp  application.h  core.h  entryPoint.h  input.h  keyCodes.h  layer.cpp  layer.h  layerStack.cpp  layerStack.h  log.cpp  log.h  mouseCodes.h  pointers.h  types.h  window.h
eugine/src/eugine/event/: applicationEvent.h  event.h  keyEvent.h  mouseEvent.h
eugine/src/eugine/events/: applicationEvent.h  keyEvent.h  mouseEvent.h
eugine/src/eugine/imgui/: CMakeLists.txt  imguiBuild.cpp  imguiBuildGLFW.cpp  imguiBuildOGL.cpp  imguiBuildVK.cpp  imguiLayer.cpp  imguiLayer.h
eugine/src/eugine/platform/: CMakeLists.txt
eugine/src/eugine/platform/OpenGL/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  OpenGLAPI.cpp  OpenGLAPI.h  Renderer2DLowLevel.cpp  Renderer2DLowLevel.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  error.cpp  error.h  imguiOpenGLRenderer.cpp
eugine/src/eugine/platform/OpenGL/wrapper/: GLAPI.cpp  GLAPI.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  error.h
eugine/src/eugine/platform/Vulkan/: CMakeLists.txt  VKAPI.cpp  VKAPI.h  ValidationLayers.cpp  ValidationLayers.h  VkBufferUtil.cpp  VkBufferUtil.h  VkCommandBufferUtil.cpp  VkCommandBufferUtil.h  VkDescriptorSetAllocator.cpp  VkDescriptorSetAllocator.h  VkDevice.cpp  VkDevice.h  VkDynamicBufferFrameAllocator.cpp  VkDynamicBufferFrameAllocator.h  VkFramebuffer.cpp  VkFramebuffer.h  VkImguiSystem.cpp  VkImguiSystem.h  VkIndexBuffer.cpp  VkIndexBuffer.h  VkOffscreenSubRenderer.cpp  VkOffscreenSubRenderer.h  VkRenderPass.cpp  VkRenderPass.h  VkRenderer2DLowLevel.cpp  VkRenderer2DLowLevel.h  VkShader.cpp  VkShader.h  VkTexture.cpp  VkTexture.h  VkUniformBuffer.cpp  VkUniformBuffer.h  VkVertexBuffer.cpp  VkVertexBuffer.h  VkWindow.cpp  VkWindow.h
eugine/src/eugine/platform/linux/: CMakeLists.txt  linuxInput.cpp  linuxInput.h  linuxWindow.cpp  linuxWindow.h
eugine/src/eugine/rendering/: CMakeLists.txt  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Framebuffer.cpp  Framebuffer.h  GraphicsAPI.cpp  GraphicsAPI.h  IndexBuffer.cpp  IndexBuffer.h  LowLevelRenderer.cpp  LowLevelRenderer.h  RenderManager2D.cpp  RenderManager2D.h  Renderer2D.cpp  Renderer2D.h  Renderer2DLowLevel.cpp  Renderer2DLowLevel.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Types.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
eugine/src/eugine/rendering/shaders/Renderer2D/: quadShader.frag  quadShader.vert  shader.frag  shader.vert
eugine/src/eugine/scene/: CMakeLists.txt  Scene.cpp  Scene.h
eugine/src/eugine/util/: CMakeLists.txt  filesystem.cpp  filesystem.h
sandbox/: CMakeLists.txt
sandbox/res/shaders/: simple.vs
sandbox/src/: sandbox.cpp
